--- a/crew.css
+++ b/crew.css
@@ -183,18 +183,19 @@ main {
   align-items: center;
 }
 .crew-image img {
-  justify-content: center;
   height: 222px;
   width: auto;
 }
+
 .crew-image {
   margin-top: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
   border-bottom: 1px solid rgba(128, 128, 128, 0.356);
-  width: 85%;
+  width: 100%;
 }
+
 .title span {
   color: rgba(255, 255, 255, 0.253);
   font-family: var(--ff-barlow);
@@ -358,6 +359,11 @@ h1 {
     order: 3;
   }
 
+  .content-row {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
   .primary-content {
     margin-top: 4.75rem;
   }
@@ -396,7 +402,8 @@ h1 {
 
 @media (min-width: 1024px) {
   body {
-    background-image: url(./assets/crew/background-crew-desktop.jpg) cover;
+    background-image: url(./assets/crew/background-crew-desktop.jpg);
+    background-color: #0c0e17;
   }
 
   header {
@@ -430,8 +437,10 @@ h1 {
 
   main {
     align-items: flex-start;
+    justify-content: start;
     flex-direction: row;
     padding: 0;
+    height: 100%;
   }
 
   .title {
@@ -453,6 +462,7 @@ h1 {
 
   .primary-content {
     align-items: start;
+    margin: 0;
   }
 
   h1 {
@@ -476,20 +486,25 @@ h1 {
   }
 
   .crew-image {
-    display: fixed;
-    position: absolute;
-    bottom: 0;
-    right: 8rem;
+    align-items: center;
+    margin: 0;
     width: auto;
-  }
-
-  .crew-image img {
-    width: 450px;
-    height: 550px;
+    border-bottom: none;
   }
 
   .content-wrapper {
+    flex-direction: column;
     align-items: flex-start;
-    margin: 2rem 9rem 0;
+    margin: 0;
+  }
+
+  .content-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex-direction: row-reverse;
+    width: 100%;
+    padding: 0 9rem;
+    gap: 1rem;
   }
 }
