--- a/crew.css
+++ b/crew.css
@@ -113,14 +113,15 @@ nav {
   -webkit-backdrop-filter: blur(80px);
   backdrop-filter: blur(80px);
   padding-top: 8rem;
-  transform: translateX(100%);
   z-index: 99999;
+  visibility: hidden;
 }
 
 .active {
   display: block;
   transform: translateX(0);
   transition: 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  visibility: visible;
 }
 
 nav ul li {
@@ -243,7 +244,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
+  margin: 2rem auto;
 }
 h2 {
   font-size: 1rem;
@@ -299,6 +300,7 @@ h1 {
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(70px);
     opacity: 1;
+    visibility: visible;
   }
 
   nav ul {
@@ -425,6 +427,7 @@ h1 {
     gap: 6rem;
     backdrop-filter: blur(20px);
     opacity: 1;
+    visibility: visible;
   }
 
   .number {
