--- a/style.css
+++ b/style.css
@@ -88,8 +88,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
-  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -108,19 +107,20 @@ nav {
   position: absolute;
   top: 0;
   right: 0;
-  height: 100vh;
+  height: 100%;
   width: 75%;
   -webkit-backdrop-filter: blur(80px);
   backdrop-filter: blur(80px);
   padding-top: 8rem;
-  transform: translateX(100%);
-  z-index: 99999;
+  z-index: 99;
+  visibility: hidden;
 }
 
 .active {
   display: block;
   transform: translateX(0);
   transition: 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  visibility: visible;
 }
 
 nav ul li {
@@ -244,6 +244,7 @@ button:hover::before {
 @media (min-width: 768px) {
   body {
     background-image: url(./assets/home/background-home-tablet.jpg);
+    overflow: visible;
   }
   header {
     padding: 36px 40px;
@@ -266,6 +267,7 @@ button:hover::before {
     width: auto;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(70px);
+    visibility: visible;
   }
 
   nav ul {
@@ -357,6 +359,7 @@ button:hover::before {
     padding: 0 4rem;
     gap: 6rem;
     backdrop-filter: blur(20px);
+    visibility: visible;
   }
 
   .number {
