--- a/crew.css
+++ b/crew.css
@@ -86,11 +86,9 @@ h6 {
 body {
   background-image: url(./assets/crew/background-crew-mobile.jpg);
   background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
-  width: 100%;
-  overflow-x: hidden;
+  background-position: center;
+  background-color: #0c0e17;
 }
 
 header {
@@ -171,6 +169,7 @@ main {
   flex-direction: column;
   align-items: center;
 }
+
 .title {
   display: flex;
   flex-direction: column;
@@ -178,6 +177,7 @@ main {
   gap: 2rem;
   width: 327px;
 }
+
 .content-wrapper {
   display: flex;
   flex-direction: column;
