--- a/style.css
+++ b/style.css
@@ -51,13 +51,7 @@ select {
 /*
   8. Avoid text overflows
 */
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+p {
   overflow-wrap: break-word;
 }
 /*
@@ -114,13 +108,13 @@ nav {
   padding-top: 8rem;
   z-index: 99;
   visibility: hidden;
+  transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  transform: translateX(100%);
 }
 
-.active {
-  display: block;
-  transform: translateX(0);
-  transition: 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+.show-nav {
   visibility: visible;
+  transform: translateX(0);
 }
 
 nav ul li {
@@ -224,21 +218,51 @@ button:hover::before {
   opacity: 1;
 }
 
-.hamburger-menu {
+.ham {
   cursor: pointer;
-  position: absolute;
-  right: 24px;
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 400ms;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  z-index: 999;
+  width: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 2px;
+}
+.hamRotate.active {
+  transform: rotate(45deg);
+}
+.hamRotate180.active {
+  transform: rotate(180deg);
+}
+.line {
+  fill: none;
+  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  stroke: var(--color-white);
+  stroke-width: 5.5;
+  stroke-linecap: round;
 }
 
-.close-icon {
-  display: none;
-  cursor: pointer;
-  z-index: 999999;
+.ham7 .top {
+  stroke-dasharray: 40 82;
 }
-
-.show {
-  display: flex;
-  z-index: 999999;
+.ham7 .middle {
+  stroke-dasharray: 40 111;
+}
+.ham7 .bottom {
+  stroke-dasharray: 40 161;
+}
+.ham7.active .top {
+  stroke-dasharray: 17 82;
+  stroke-dashoffset: -62px;
+}
+.ham7.active .middle {
+  stroke-dashoffset: 23px;
+}
+.ham7.active .bottom {
+  stroke-dashoffset: -83px;
 }
 
 @media (min-width: 768px) {
@@ -296,7 +320,7 @@ button:hover::before {
     background: red;
   }
 
-  .hamburger-menu {
+  svg.ham.hamRotate.ham7 {
     display: none;
   }
 
