--- a/crew.css
+++ b/crew.css
@@ -107,13 +107,10 @@ nav {
   padding-top: 8rem;
   z-index: 99;
   visibility: hidden;
-  transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
-  transform: translateX(100%);
 }
 
 .show-nav {
   visibility: visible;
-  transform: translateX(0);
 }
 
 nav ul li {
@@ -279,6 +276,8 @@ h2 {
   font-family: var(--ff-bellefair);
   color: rgba(255, 255, 255, 0.5);
   text-transform: uppercase;
+  width: 100%;
+  text-align: center;
 }
 
 h1 {
@@ -496,6 +495,10 @@ h1 {
 
   h1 {
     font-size: 3.5rem;
+  }
+
+  h2 {
+    text-align: left;
   }
 
   .primary-content p {
